--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@react-navigation/native": "^6.1.14",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-sticky-nav": "^4.0.6",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "three": "^0.164.0"
   },
   "devDependencies": {
     "@types/node": "^20",
